force-app/main/default/objects/Score__c/Score__c.object-meta.xml
<CustomObject>
    <label>Score</label>
    <nameField>
        <label>Score Name</label>
        <type>AutoNumber</type>
        <displayFormat>SCORE-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>