force-app/main/default/objects/Score__c/fields/Lines_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Lines_Cleared__c</fullName>
    <label>Lines Cleared</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>