force-app/main/default/objects/Score__c/listViews/All_Scores.listView-meta.xml
<ListView>
    <fullName>All_Scores</fullName>
    <filterScope>Everything</filterScope>
    <label>All Scores</label>
    <columns>Player_Name__c</columns>
    <columns>Score__c</columns>
    <columns>Lines_Cleared__c</columns>
    <columns>Level__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>