force-app/main/default/objects/Score__c/listViews/RecentlyViewed.listView-meta.xml
<ListView>
    <fullName>RecentlyViewed</fullName>
    <filterScope>Everything</filterScope>
    <label>Recently Viewed</label>
    <columns>Player_Name__c</columns>
    <columns>Score__c</columns>
    <columns>Lines_Cleared__c</columns>
    <columns>Level__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>